refactor: uncouple api types from entity types
