# api/handlers/health_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"encoding/json"
 	"log/slog"
 	"net/http"
 
@@ -18,10 +19,12 @@ var _ health.ServerInterface = (*HealthHandler)(nil)
 
 func (h *HealthHandler) HealthCheck(writer http.ResponseWriter, request *http.Request) {
 	slog.DebugContext(request.Context(), "Handle health request")
+	response := health.HealthCheckResponse{
+		Status: "ok",
+	}
 	writer.Header().Set("Content-Type", "application/json")
 	writer.WriteHeader(http.StatusOK)
-	_, err := writer.Write([]byte(`{"status": "ok"}`))
-	if err != nil {
+	if err := json.NewEncoder(writer).Encode(response); err != nil {
 		slog.ErrorContext(request.Context(), "Failed to write response", "error", err)
 	}
 }
